# g4

./: .gitignore  .gitmodules  CMakeLists.txt
Examples/: CMakeLists.txt  Cube4d.cpp  Segment.cpp  Sphere.cpp  Tetrahedron.cpp
Include/g4/: CMakeLists.txt  g4.h
Include/g4/common/: CMakeLists.txt  g4_DataTypes.h  g4_FloatTypes.h
Include/g4/ffi/: CMakeLists.txt  g4_Generator.h  g4_IInterpolator.h  g4_IPointGenerator.h  g4_LinearInterpolator.h  g4_SimplePointGenerator.h
Include/g4/generators/: CMakeLists.txt  g4_CgalSurfaceReconstructor.h  g4_DirectGenerator.h  g4_Generator.h  g4_IGeometryProvider.h  g4_IInterpolator.h  g4_IMeshBuffer.h  g4_IMeshProvider.h  g4_IPointGenerator.h  g4_ISurfaceReconstructor.h  g4_Types.h
Include/g4/generators/detail/: CMakeLists.txt  g4_CgalMeshGenerator.h
Include/g4/io/: CMakeLists.txt  g4_WavefrontObjFileFormatter.h
Include/g4/util/: CMakeLists.txt  g4_LinearInterpolator.h  g4_SimplePointGenerator.h  g4_VectorMeshBuffer.h
Sources/Libraries/: CMakeLists.txt
Sources/Libraries/g4/: CMakeLists.txt  g4_MeshGenerator.cpp
Sources/Libraries/g4/common/: CMakeLists.txt  g4_FloatTypes.cpp
Sources/Libraries/g4/ffi/: CMakeLists.txt  g4_Generators.cpp  g4_IInterpolator.cpp  g4_IPointGenerator.cpp  g4_LinearInterpolator.cpp  g4_SimplePointGenerator.cpp
Sources/Libraries/g4/generators/: CMakeLists.txt  g4_CgalSurfaceReconstructor.cpp  g4_DirectGenerator.cpp
Sources/Libraries/g4/generators/detail/: CMakeLists.txt  g4_CgalMeshGenerator.cpp
Sources/Libraries/g4/io/: CMakeLists.txt  g4_WavefrontObjFileFormatter.cpp
Sources/Libraries/g4/util/: CMakeLists.txt  g4_LinearInterpolator.cpp  g4_SimplePointGenerator.cpp
Sources/g4-sys/: Cargo.toml  build.rs
Sources/g4-sys/examples/: sample.rs
Sources/g4-sys/src/: lib.rs
Tests/Sources/: CMakeLists.txt
Tests/Sources/Applications/: CMakeLists.txt  Main.cpp  g4_LinearInterpolationTests.cpp  g4_SimplePointGeneratorTests.cpp
